Changes in version 1.7.2 (2022-02-17)
+ assay_name argument changed to assay.type

Changes in version 0.99.0 (2021-03-19)
+ Submitted to Bioconductor

Changes in version 1.1.x
+ Added plotAbundanceDensity (2021-06-23)

Changes in version 1.3.x
+ Bugfix for plotting functions to support sparseMatrix and other assay types (2021-12-31)
+ Replaced abund_values with assay_name

Changes in version 1.5.x
+ plot*Tree & *TreeData: Add support for multiple trees
+ plot*Tree layout bugfix

Changes in version 1.7.x
+ Fixed plotGraph* that was broked due changes in dependencies

Changes in version 1.9.x
+ Updated plotDMN to work with newest mia version
+ Added plotCCA and plotRDA functions

Changes in version 1.11.x
+ replace addTaxonomyTree with addHierarchyTree after renaming in mia package

Changes in version 1.13.x
+ plot*Tree: bugfix, ununique nodes
+ Added confidence.level parameter to plotCCA
+ add plotNMDS to miaViz (plotNMDS deprecated in mia)
+ Added getNeatOrder function
+ plotAbundance: enable plotting without agglomeration
+ Change parameter naming convention from parameter_name to parameter.name
+ Added plotLoadings function

Changes in version 1.15.x
+ plotAbundance: Improved visualization of sample metadata
+ plotScree: Method for creating scree plots
+ plotRDA: Now it is possible to add only specified vectors