@@ -1,6 +1,6 @@
 Package: miaViz
 Title: Microbiome Analysis Plotting and Visualization
-Version: 1.15.5
+Version: 1.15.6
 Authors@R: 
     c(person(given = "Tuomas", family = "Borman", role = c("aut", "cre"),
              email = "tuomas.v.borman@utu.fi",
@@ -70,6 +70,7 @@ Suggests:
     knitr,
     patchwork,
     rmarkdown,
+    shadowtext,
     testthat,
     vegan
 Remotes:
