@@ -7,6 +7,7 @@ export(plotColTile)
 export(plotDMNFit)
 export(plotFeaturePrevalence)
 export(plotLoadings)
+export(plotMediation)
 export(plotNMDS)
 export(plotPrevalence)
 export(plotPrevalentAbundance)
@@ -31,6 +32,7 @@ exportMethods(plotColTree)
 exportMethods(plotDMNFit)
 exportMethods(plotFeaturePrevalence)
 exportMethods(plotLoadings)
+exportMethods(plotMediation)
 exportMethods(plotPrevalence)
 exportMethods(plotPrevalentAbundance)
 exportMethods(plotRDA)
@@ -88,6 +90,7 @@ importFrom(dplyr,n)
 importFrom(dplyr,pull)
 importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
+importFrom(dplyr,rename_with)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
@@ -155,6 +158,7 @@ importFrom(tidygraph,as_tibble)
 importFrom(tidyr,complete)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(tidytext,reorder_within)
 importFrom(tidytext,scale_y_reordered)
 importFrom(tidytree,as.phylo)
